Squashed commit of the following:
commit 773bb6568fd5f00178445bbeb52df1b6fa49f3dd
Author: Tali <tali.ben-meir@hpe.com>
Date:   Wed Mar 1 16:49:03 2017 +0200

    Code adjustments for ITM yang changes for multiple VxLAN tunnels

    NB: This change must be submitted together with genius yang changes
    https://git.opendaylight.org/gerrit/#/c/51770/

    Change-Id: Ie8dee423d2355b479b75797b341fea21071df9f8
    Signed-off-by: Tali <tali.ben-meir@hpe.com>

commit c48805f256cbaca77aa1f570f209ae50c09e1af2
Author: Abhinav Gupta <abhinav.gupta@ericsson.com>
Date:   Wed Mar 15 19:34:28 2017 +0530

    Bug 7939, 7938, 7968, 7997: Potential fix for the four L3VPN bugs

    While creating LocalFibEntry, localDpnId list is being returned empty
    leading to local FIB entry not getting installed.
    The fix ensures we log an error statement in case it happens and tries
    to achieve processing config and inventory transactions for the
    vpninterface once operational transaction is processed.

    Change-Id: I95589523079f9d990b5e61d96b71b2c6d1c133e1
    Signed-off-by: Abhinav Gupta <abhinav.gupta@ericsson.com>

commit 711b7dede2b5726d54169d70eaceb97fbb02d66a
Author: Julien Courtat <julien.courtat@6wind.com>
Date:   Fri Feb 24 11:46:31 2017 +0100

    Yang changes for Inter DC connectivity using BGPVPNv6

    This patchset includes the yang changes required to implement
    Spec to support IPv6 Inter DC L3VPN connectivity using BGPVPN [1].

    [1] https://git.opendaylight.org/gerrit/#/c/50359

    Change-Id: I70fb5460bde2a852dc965525fb37ae8003bea109
    Signed-off-by: Julien Courtat <julien.courtat@6wind.com>

commit 35ebb9adc109743c820abfdc9dd112bea11e8337
Author: Periyasamy Palanisamy <periyasamy.palanisamy@ericsson.com>
Date:   Thu Mar 9 12:14:07 2017 +0530

    Bug 7826: proper elan djc job retries

    When ELAN BC programming fails due to TransactionCommitFailedException
    then there is no way of retrying djc job due to syncInstall(Delete)Group. It is fixed now and t